<resources>
    <string name="app_name">Community Garden Scheduler</string>

    <string-array name="task_array">
        <item>Watering</item>
        <item>Planting</item>
        <item>Harvest</item>
        <item>Pruning</item>
    </string-array>

    <string-array name="season_array">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </string-array>

    <string name="watering_description">To determine if your plants need water, insert your finger one knuckle deep into the soil. If your fingertip is dry, it\'s time to water your plants. Be sure to water the soil itself to allow the roots to soak it right up.</string>
    <string name="weeding_description">Weeds always seem to grow faster than pretty plants. Be sure to inspect your plants often and check under leaves to ensure they don\'t spread.</string>
    <string name="inspection_description">Constant maintenance is the key to a healthy garden. Many types of flowers are deadheaded (need trimming), insects and pests may invade your plants, and their structure may become compromised as they grow tall. All these risks can be mitigated with proper care and vigilance.</string>
    <string name="fertilization_description">Ensure your plants have access to a healthy ratio of Nitrogen, phosphorus and potassium in your soil so they can thrive, Fertlization is a crucial step in gardening..</string>
    <string name="harvest_description">Harvesting your garden involves the proper technique and timing as determined by the type of plant being harvested. Sharing your harvest with your family and community is one of gardening\'s great joys.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="reenter">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="go">GO</string>
    <string name="exit">Exit</string>
    <string name="x">X</string>
    <string name="times">Times</string>
    <string name="days">Days</string>
    <string name="repeat">Repeat</string>
    <string name="every">Every</string>
    <string name="repeat_value_error">* Repeat value error</string>
    <string name="star">*</string>
    <string name="task">Task</string>
    <string name="unassigned_tasks">Unassigned Tasks</string>
    <string name="open_task_creator">Create Task</string>
    <string name="register_for_task">Register Task</string>
    <string name="open_activity_3">Open Activity 3</string>
    <string name="open_login_activity">Open Login Activity</string>
    <string name="tasks_information">Task Info</string>
    <string name="logout">Logout</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="maintenance">Maintenance</string>
    <string name="weeding">Weeding</string>
    <string name="watering">Watering</string>
    <string name="harvesting">Harvesting</string>
    <string name="register_here">Don\'t have an account? Register here</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="task_type">Task type:</string>
    <string name="task_description">Task Description:</string>
    <string name="unassigned">Unassigned</string>
    <string name="due_on">Due On:</string>
    <string name="mm_dd_yyyy">mm-dd-yyyy</string>
    <string name="assignee">Assignee:</string>
    <string name="overdue_tasks">Overdue Tasks</string>
    <string name="add">Add</string>
    <string name="hint">type here</string>
    <string name="input_is_empty">*  Input-Field is empty</string>
    <string name="task_list">Task List</string>
    <string name="todays_tasks">Today\'s Tasks</string>
    <string name="completed_on">Completed On:</string>
    <string name="uncancel_task">UnCancel Task</string>
    <string name="unmark_complete">UnMark Complete</string>
    <string name="unassign_to_me">UNAssign to me</string>
    <string name="experienced_gardener">Experienced Gardener</string>
    <string name="add_new_task_type">Add Task Type</string>
    <string name="task_types">Task Types</string>
    <string name="plant_info">Plant Info</string>
    <string name="plant_name">Plant Name</string>
    <string name="season">Season</string>
    <string name="submit">Submit</string>
    <string name="planting_instructions">Planting Instructions</string>
    <string name="plant_types">Plant Types</string>
    <string name="create">Create</string>
    <string name="add_plant_type">Add Plant Type</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="fingerprint">LogIn with FingerPrint</string>
    <string name="plant_information">Plant Information</string>
    <string name="_0">0</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

</resources>
