<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPlantToDbActivity"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/editTextPlantInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/rajdhani_semibold"
        android:hint="@string/plant_information"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/editTextPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/rajdhani_semibold"
        android:hint="@string/plant_name"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/editTextPlantInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/rajdhani_semibold"
        android:hint="@string/planting_instructions"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/submitPlantBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:hint="@string/submit"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Spinner
        android:id="@+id/seasonSpinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:entries="@array/season_array"
        android:popupBackground="@color/backgroundColor"
        app:layout_constraintBottom_toTopOf="@+id/editTextPlantInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlantName"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>